--- a/openxr_inventory/templates/extension_support.jinja2.html
+++ b/openxr_inventory/templates/extension_support.jinja2.html
@@ -16,7 +16,9 @@ SPDX-License-Identifier: CC-BY-4.0
 {% block navbar_list_items %}
     <li><a href="#extensions">Extensions</a></li>
     <li><a href="#runtimes">Runtimes</a></li>
-    <li><a href="#matrix">Extension Support Matrix</a></li>
+    <li><a href="#runtime_matrix">Runtime Support Matrix</a></li>
+    <li><a href="#clients">Clients</a></li>
+    <li><a href="#client_matrix">Client Support Matrix</a></li>
 {% endblock navbar_list_items %}
 
 {% block style %}
@@ -64,16 +66,29 @@ th.rotate > div {
         {% set support = extension_support[extension_name] %}
 
         <div class="row" id="{{ extension_name }}">
-            <h3>{{ extension_name }} ({{ support | length }} runtime{{ "s" if support | length != 1 }})</h3>
+            <h3>{{ extension_name }} ({{ support.runtime_count }} runtime{{ "s" if support.runtime_count != 1 }}, {{ support.client_count }} client{{ "s" if support.client_count != 1 }})</h3>
             <p>
                 <a href="{{spec_url}}#{{extension_name}}">Specification
                     for {{ extension_name }}</a>
             </p>
+            Runtimes:<br>
             <ul>
-                {% for runtime, entry in support | sort %}
+                {% for runtime in runtimes | sort %}
+                {% if extension_name in runtime_support[runtime.name] %}
                 <li><a href="#{{ runtime.stub }}">{{ runtime.vendor }} - {{ runtime.name }}</a></li>
+                {% endif %}
                 {% endfor %}
             </ul>
+            {% if support.client_count > 0 %}
+            Clients:<br>
+            <ul>
+                {% for client in clients | sort %}
+                {% if extension_name in client_support[client.name] %}
+                <li><a href="#{{ client.stub }}">{{ client.vendor }} - {{ client.name }}</a></li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+           {% endif %}
         </div>
         {% endfor %}
     </section>
@@ -113,13 +128,14 @@ th.rotate > div {
                         <li><a href="#{{extension.name}}">{{extension.name}}</a> {% if extension.notes %} - {{ extension.notes }} {% endif %} </li>
                         {% endfor %}
                     </ul>
+                </li>
             </ul>
         </div>
         {% endfor %}
     </section>
 
     <section>
-        <div id="matrix" class="jumbotron row">
+        <div id="runtime_matrix" class="jumbotron row">
             <h2>Runtime support matrix</h2>
         </div>
         <table class="table table-hover table-condensed table-sticky-col-headers">
@@ -213,6 +229,153 @@ th.rotate > div {
                             </th>
                             {% for runtime in runtimes | sort %}
                                 {% if ff in form_factor_support[runtime.name] and vc in form_factor_support[runtime.name][ff] and ebm in form_factor_support[runtime.name][ff][vc] %}
+                                <td class="text-center bg-success"><span class="glyphicon glyphicon-ok" style="color:green" aria-hidden="true"></span><span class="sr-only">Supported</span></td>
+                                {% else %}
+                                <td class="text-center"><span class="glyphicon glyphicon-minus" style="opacity:0.1"></span><span class="sr-only">Not supported or not applicable</span></td>
+                                {% endif %}
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+
+                    </tr>
+                    {% endfor %}
+
+                {% endfor %}
+
+            </tbody>
+        </table>
+    </section>
+
+    <section>
+        <!-- client toc -->
+        <div id="clients" class="jumbotron row">
+            <h2>Clients</h2>
+
+            <ul class="list-unstyled">
+                {% for client in clients | sort %}
+                <li><a href="#{{ client.stub }}">{{ client.vendor }} - {{ client.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+
+        {% for client in clients %}
+        <div class="row" id="{{ client.stub }}">
+            <h3>{{ client.name }}</h3>
+            <ul>
+                <li>Vendor: {{ client.vendor }}</li>
+                {% if client.notes %}
+                <li>Notes: {{ client.notes }}</li>
+                {% endif %}
+                {% for component in client.components %}
+                <li>Component: {{ component.name }}<br>Extensions:
+                    <ul>
+                        {% for extension in component.extensions %}
+                        <li><a href="#{{extension.name}}">{{extension.name}}</a> {% if extension.notes %} - {{ extension.notes }} {% endif %} </li>
+                        {% endfor %}
+                    </ul>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endfor %}
+    </section>
+
+    <section>
+        <div id="client_matrix" class="jumbotron row">
+            <h2>Client support matrix</h2>
+        </div>
+        <table class="table table-hover table-condensed table-sticky-col-headers">
+            <thead>
+                <tr>
+                    <th></th>
+                    {% for client in clients | sort %}
+                        {# pragmatic check if the client name fits in the layout or if it needs to be truncated and put the full name in tooltip #}
+                        {% if client.name|length < 34 %}
+                        <th class="rotate" style="border:none"><div><span>{{ client.name }}</span></div></th>
+                        {% else %}
+                        <th class="rotate" style="border:none"><div><span><abbr title="{{client.name}}">{{ client.name|truncate(34, True) }}</abbr></span></div></th>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+
+                {% macro extension_matrix_row(extension_name) %}
+                <tr>
+                    <th class="extname">
+                        {{ extension_name }}
+                        <a href="{{spec_url}}#{{extension_name}}" alt="speficication text">
+                            <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                        </a>
+                    </th>
+                    {% for client in clients | sort %}
+                        {% set component = client.get_component_for_extension(extension_name) %}
+                        {% if component %}
+                        <td class="text-center bg-success" style="background-color:{{ component.color }}"><span><abbr title="{{component.name}}">{{ component.abbreviation }}</abbr></span></td>
+                        {% else %}
+                        <td class="text-center"><span class="glyphicon glyphicon-minus" style="opacity:0.1"></span><span class="sr-only">Not supported or not applicable</span></td>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+                {% endmacro %}
+
+                {# Loop through all categories of extension (KHR, EXT, vendor, KHX, EXTX, Vendor-X) #}
+                {% for c in cat.all_categories() %}
+                    {# Loop through all extensions in that category #}
+                    {% for extension_name in extensions if categorize_ext(extension_name) == c %}
+                        {% if loop.first %}
+                            {# this header is inside the loop so it is skipped if we have no items in this category #}
+                            {# it is inside this "if" so it only shows up once for each category. #}
+                            <tr class="active">
+                                <th style="text-align:center" colspan="{{ clients|length + 1 }}">{{ cat_captions[c] }} Extensions</th>
+                            </tr>
+                        {% endif %}
+                        {# Write out a row in the table for this extension #}
+                        {{ extension_matrix_row(extension_name) }}
+                    {% endfor %}
+                {% endfor %}
+
+                <tr class="active">
+                    <th style="text-align:center" colspan="{{ clients|length + 1 }}">Client Features</th>
+                </tr>
+
+                {% for ff, view_configurations in known_form_factors.items() %}
+                    <tr>
+                        <th class="extname">
+                            {{ ff }}
+                            <a href="{{spec_url}}#XrFormFactor" alt="speficication text">
+                                <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                            </a>
+                        </th>
+
+                        {% for client in clients | sort %}
+                            <td class="text-center"></span></td>
+                        {% endfor %}
+                    </tr>
+
+                    {% for vc, environment_blend_modes in view_configurations.items() %}
+                    <tr>
+                        <th class="extname">
+                            &rarr; {{ vc }}
+                            <a href="{{spec_url}}#XrViewConfigurationType" alt="speficication text">
+                                <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                            </a>
+                        </th>
+
+                        {% for client in clients | sort %}
+                            <td class="text-center"></span></td>
+                        {% endfor %}
+
+                        {% for ebm in environment_blend_modes %}
+                        <tr>
+                            <th class="extname">
+                                &rarr; &rarr; {{ ebm }}
+                                <a href="{{spec_url}}#XrEnvironmentBlendMode" alt="speficication text">
+                                    <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                                </a>
+                            </th>
+                            {% for client in clients | sort %}
+                                {% if ff in form_factor_support[client.name] and vc in form_factor_support[client.name][ff] and ebm in form_factor_support[client.name][ff][vc] %}
                                 <td class="text-center bg-success"><span class="glyphicon glyphicon-ok" style="color:green" aria-hidden="true"></span><span class="sr-only">Supported</span></td>
                                 {% else %}
                                 <td class="text-center"><span class="glyphicon glyphicon-minus" style="opacity:0.1"></span><span class="sr-only">Not supported or not applicable</span></td>
